# COMP2811-User_Interfaces

./: .gitignore
C++ Exercises/C++ Classes/: circle2.cpp  circle2.hpp  rect.cpp  rect.hpp  shape.hpp  shapedemo.cpp  testrect.cpp
C++ Exercises/Getting Started With Qt/hello/: CMakeLists.txt  hello.cpp
C++ Exercises/Introduction to C++/: mean.cpp
C++ Exercises/Introduction to Qt/hello/: hello.cpp
C++ Exercises/Programming Widget Layout/form/: CMakeLists.txt  main.cpp
C++ Exercises/Programming Widget Layout/grid/: CMakeLists.txt  main.cpp
C++ Exercises/Programming Widget Layout/hbox/: CMakeLists.txt  main.cpp
